--- a/package.json
+++ b/package.json
@@ -3,28 +3,30 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.0.5",
-    "@angular/cdk": "^11.0.3",
-    "@angular/common": "11.0.5",
-    "@angular/compiler": "11.0.5",
-    "@angular/core": "11.0.5",
+    "@angular/animations": "11.2.1",
+    "@angular/cdk": "^11.2.1",
+    "@angular/common": "11.2.1",
+    "@angular/compiler": "11.2.1",
+    "@angular/core": "11.2.1",
     "@angular/fire": "^6.1.4",
-    "@angular/forms": "11.0.5",
-    "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "11.0.5",
-    "@angular/platform-browser-dynamic": "11.0.5",
-    "@angular/router": "11.0.5",
+    "@angular/forms": "11.2.1",
+    "@angular/material": "^11.2.1",
+    "@angular/platform-browser": "11.2.1",
+    "@angular/platform-browser-dynamic": "11.2.1",
+    "@angular/router": "11.2.1",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "angular-in-memory-web-api": "0.11.0",
     "fibers": "^5.0.0",
-    "firebase": "^8.2.1",
+    "firebase": "^8.2.9",
     "hammerjs": "^2.0.8",
-    "html-webpack-plugin": "^4.5.1",
-    "jasmine-marbles": "0.6.0",
+    "html-webpack-plugin": "^5.2.0",
+    "jasmine-marbles": "0.8.1",
     "minimist": "^1.2.5",
     "node-sass": "^5.0.0",
     "rxjs": "6.6.3",
-    "tslib": "^2.0.3",
-    "zone.js": "~0.11.3"
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.4"
   },
   "scripts": {
     "ng": "ng",
@@ -38,23 +40,23 @@
     "build-fire": "ng build --configuration=production --outputHashing=all && npm run post-build && firebase deploy --only hosting:moto-sag"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1100.5",
-    "@angular-devkit/build-angular": "~0.1100.5",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler-cli": "~11.0.5",
-    "@angular/language-service": "~11.0.5",
-    "@types/hammerjs": "^2.0.36",
-    "@types/jasmine": "^3.6.2",
+    "@angular-devkit/architect": "^0.1102.1",
+    "@angular-devkit/build-angular": "~0.1102.1",
+    "@angular/cli": "~11.2.1",
+    "@angular/compiler-cli": "~11.2.1",
+    "@angular/language-service": "~11.2.1",
+    "@types/hammerjs": "^2.0.39",
+    "@types/jasmine": "^3.6.4",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.14.19",
+    "@types/node": "^14.14.31",
     "codelyzer": "^6.0.1",
-    "firebase-tools": "^9.1.0",
+    "firebase-tools": "^9.4.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^7.3.3",
     "inquirer-autocomplete-prompt": "^1.3.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "^5.2.3",
+    "karma": "^6.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
@@ -62,7 +64,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.3",
-    "typescript": "~4.0.3"
+    "typescript": "~4.1.5"
   },
   "resolutions": {
     "minimist": "^1.2.3",
