--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material.angular",
+  "name": "motosag",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "@angular/platform-browser": "11.2.1",
     "@angular/platform-browser-dynamic": "11.2.1",
     "@angular/router": "11.2.1",
+    "@angular/service-worker": "11.2.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-in-memory-web-api": "0.11.0",
