--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "e2e": "ng e2e",
     "deploy": "ng deploy && npm run post-build",
     "post-build": "node ./build/post-build.js",
-    "build-fire": "ng build --configuration=production --outputHashing=all && npm run post-build && firebase deploy --only hosting:moto-sag"
+    "build-fire-old": "ng build --configuration=production --outputHashing=all && npm run post-build && firebase deploy --only hosting:moto-sag",
+    "build-fire": "ng build --configuration=production --outputHashing=all && firebase deploy --only hosting:moto-sag"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1102.7",
