--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.3",
-    "typescript": "~4.1.5"
+    "typescript": "^4.2.4"
   },
   "resolutions": {
     "minimist": "^1.2.3",
