--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "build-fire": "ng build --configuration=production --outputHashing=all && firebase deploy --only hosting:moto-sag"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1303.11",
-    "@angular-devkit/build-angular": "~13.3.11",
-    "@angular/cli": "~13.3.11",
-    "@angular/compiler-cli": "~14.3.0",
-    "@angular/language-service": "~14.3.0",
+    "@angular-devkit/architect": "^0.1402.11",
+    "@angular-devkit/build-angular": "^14.2.11",
+    "@angular/cli": "^14.2.11",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/language-service": "^14.3.0",
     "@types/hammerjs": "^2.0.39",
     "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "~2.0.8",
