--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^16.0.4",
     "@angular/animations": "16.0.4",
     "@angular/cdk": "^16.0.3",
     "@angular/common": "16.0.4",
