--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^16.0.4",
     "@angular/animations": "16.0.4",
     "@angular/cdk": "^16.0.3",
     "@angular/common": "16.0.4",
@@ -65,7 +66,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~10.9.1",
     "tslint": "~6.1.3",
-    "typescript": "^5.1.3"
+    "typescript": "4.9"
   },
   "resolutions": {
     "minimist": "^1.2.3",
