--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "motosag",
-  "version": "1.0.1",
+  "version": "0.16.0",
   "private": true,
   "dependencies": {
     "@angular-devkit/core": "^16.0.4",
@@ -39,7 +39,7 @@
     "deploy": "ng deploy && npm run post-build",
     "post-build": "node ./build/post-build.js",
     "build-fire-old": "ng build --configuration=production --outputHashing=all && npm run post-build && firebase deploy --only hosting:moto-sag",
-    "build-fire": "ng build --configuration=production --outputHashing=all && firebase deploy --only hosting:moto-sag"
+    "build-fire": "ng build --configuration=production && firebase deploy --only hosting:moto-sag"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1600.4",
