--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^20.2.5",
     "codelyzer": "^6.0.2",
-    "firebase-tools": "^12.3.0",
+    "firebase-tools": "^12.3.1",
     "fuzzy": "^0.1.3",
     "inquirer": "^9.2.7",
     "inquirer-autocomplete-prompt": "^3.0.0",
@@ -63,7 +63,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "~10.9.1",
     "tslint": "~6.1.3",
     "typescript": "4.9"
