--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@angular/common": "17.3.11",
     "@angular/compiler": "17.3.11",
     "@angular/core": "17.3.11",
-    "@angular/fire": "^7.6.1",
+    "@angular/fire": "^18.0.0-rc.0",
     "@angular/forms": "17.3.11",
     "@angular/material": "^17.3.10",
     "@angular/platform-browser": "17.3.11",
