--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@angular/common": "18.0.5",
     "@angular/compiler": "18.0.5",
     "@angular/core": "18.0.5",
-    "@angular/fire": "^18.0.0-rc.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "18.0.5",
     "@angular/material": "^18.0.6",
     "@angular/platform-browser": "18.0.5",
@@ -52,7 +52,7 @@
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^20.2.5",
     "codelyzer": "^6.0.2",
-    "firebase-tools": "^12.3.1",
+    "firebase-tools": "^13.13.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^9.2.7",
     "inquirer-autocomplete-prompt": "^3.0.0",
