--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/core": "^18.0.7",
-    "@angular/animations": "18.0.6",
+    "@angular/animations": "^18.0.6",
     "@angular/cdk": "^18.0.6",
     "@angular/common": "18.0.6",
     "@angular/compiler": "18.0.6",
@@ -18,15 +18,15 @@
     "@angular/service-worker": "18.0.6",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "angular-in-memory-web-api": "0.16.0",
+    "angular-in-memory-web-api": "0.18.0",
     "fibers": "^5.0.3",
-    "firebase": "^9.22.1",
+    "firebase": "^10.12.3",
     "hammerjs": "^2.0.8",
-    "html-webpack-plugin": "^5.5.1",
+    "html-webpack-plugin": "^5.6.0",
     "jasmine-marbles": "0.9.2",
     "minimist": "^1.2.8",
     "rxjs": "7.8.1",
-    "tslib": "^2.5.3",
+    "tslib": "^2.6.3",
     "zone.js": "~0.14.7"
   },
   "scripts": {
@@ -45,28 +45,28 @@
     "@angular-devkit/architect": "^0.1800.7",
     "@angular-devkit/build-angular": "^18.0.7",
     "@angular/cli": "^18.0.7",
-    "@angular/compiler-cli": "^18.0.5",
-    "@angular/language-service": "^18.0.5",
-    "@types/hammerjs": "^2.0.41",
-    "@types/jasmine": "^4.3.2",
-    "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^20.2.5",
+    "@angular/compiler-cli": "^18.0.6",
+    "@angular/language-service": "^18.0.6",
+    "@types/hammerjs": "^2.0.45",
+    "@types/jasmine": "^5.1.4",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/node": "^20.14.9",
     "codelyzer": "^6.0.2",
     "firebase-tools": "^13.13.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^9.2.7",
-    "inquirer-autocomplete-prompt": "^3.0.0",
-    "jasmine-core": "~5.0.0",
+    "inquirer": "^9.3.3",
+    "inquirer-autocomplete-prompt": "^3.0.1",
+    "jasmine-core": "~5.1.2",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.4.2",
+    "karma": "^6.4.3",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "^7.0.0",
-    "ts-node": "~10.9.1",
+    "ts-node": "~10.9.2",
     "tslint": "~6.1.3",
-    "typescript": "5.4.5"
+    "typescript": "5.4"
   },
   "resolutions": {
     "minimist": "^1.2.3",
