--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 */
 {
   "compilerOptions": {
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "files": [],
   "references": [
