--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MOTO_SAG }}'
           channelId: live
           projectId: moto-sag
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
