feature(git): fix angular json

--- a/angular.json
+++ b/angular.json
@@ -125,7 +125,14 @@
         },
         "deploy": {
           "builder": "@angular/fire:deploy",
-          "options": {}
+          "options": {
+            "prerender": false
+          },
+          "configurations": {
+            "production": {
+              "site": "moto-sag"
+            }
+          }
         }
       }
     }
