feature(git): fix angular json

--- a/angular.json
+++ b/angular.json
@@ -130,7 +130,8 @@
           },
           "configurations": {
               "production": {
-                  "buildTarget": "motosag:build:production"
+                  "buildTarget": "motosag:build:production",
+                  "site": "moto-sag"
               }
           }
         }
