--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,13 @@
       ],
       "frameworksBackend": {
         "region": "us-central1"
-      }
+      },
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
   ]
 }
