feat(angular-19): Agnular/cli/core 19

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
 */
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "esModuleInterop": true
   },
   "files": [],
   "references": [
