--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "version": "0.19.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.7",
-    "@angular/common": "19.1.7",
-    "@angular/compiler": "19.1.7",
-    "@angular/core": "19.1.7",
-    "@angular/fire": "^19.0.0",
-    "@angular/forms": "19.1.7",
-    "@angular/platform-browser": "19.1.7",
-    "@angular/platform-browser-dynamic": "19.1.7",
-    "@angular/router": "19.1.7",
-    "@angular/service-worker": "19.1.7",
+    "@angular/animations": "20.0.3",
+    "@angular/common": "20.0.3",
+    "@angular/compiler": "20.0.3",
+    "@angular/core": "20.0.3",
+    "@angular/fire": "^20.0.0",
+    "@angular/forms": "20.0.3",
+    "@angular/platform-browser": "20.0.3",
+    "@angular/platform-browser-dynamic": "20.0.3",
+    "@angular/router": "20.0.3",
+    "@angular/service-worker": "20.0.3",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "angular-in-memory-web-api": "0.18.0",
-    "fibers": "^5.0.3",
-    "firebase": "^10.14.1",
+    "firebase": "^12.2.1",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^5.6.0",
     "jasmine-marbles": "0.9.2",
@@ -38,23 +36,22 @@
     "build-prod": "ng build --configuration=production"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1901.8",
-    "@angular-devkit/build-angular": "^19.1.8",
-    "@angular-devkit/core": "^19.1.8",
-    "@angular/cdk": "^19.1.5",
-    "@angular/cli": "^19.1.8",
-    "@angular/compiler-cli": "^19.1.7",
-    "@angular/language-service": "^19.1.7",
-    "@angular/material": "^19.1.5",
+    "@angular-devkit/architect": "^0.2000.0",
+    "@angular-devkit/build-angular": "^20.2.2",
+    "@angular-devkit/core": "^20.0.3",
+    "@angular/cdk": "20.0.3",
+    "@angular/cli": "^20.0.3",
+    "@angular/compiler-cli": "20.0.3",
+    "@angular/language-service": "20.0.3",
+    "@angular/material": "20.0.3",
     "@types/hammerjs": "^2.0.45",
     "@types/jasmine": "^5.1.4",
     "@types/jasminewd2": "~2.0.13",
     "@types/node": "^20.14.9",
-    "codelyzer": "^6.0.2",
-    "firebase-tools": "^13.13.0",
+    "firebase-tools": "^14.0.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^9.3.3",
-    "inquirer-autocomplete-prompt": "^3.0.1",
+    "inquirer": "^8.2.7",
+    "inquirer-autocomplete-prompt": "^2.0.1",
     "jasmine-core": "~5.1.2",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.4.3",
@@ -62,13 +59,12 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "protractor": "^7.0.0",
     "ts-node": "~10.9.2",
     "tslint": "~6.1.3",
-    "typescript": "5.7.3"
+    "typescript": "5.8.3"
   },
   "resolutions": {
-    "minimist": "^1.2.3",
+    "minimist": "^1.2.8",
     "yargs-parser": "^13.1.2"
   }
 }
