--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,12 +21,7 @@
       "dom"
     ]
   },
-    "files": [
-      "src/main.ts",
-      "src/polyfills.ts"
-    ],
-  "angularCompilerOptions": { 
-    "enableIvy": false,
-    "strictTemplates": true,
-  },
+  "angularCompilerOptions": {
+    "strictTemplates": true
+  }
 }
